tests/baselines/reference/computedPropertyNamesDeclarationEmit5_ES6(strict=true).errors.txt
computedPropertyNamesDeclarationEmit5_ES6.ts(5,9): error TS7032: Property '["" + ""]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNamesDeclarationEmit5_ES6.ts(5,19): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== computedPropertyNamesDeclarationEmit5_ES6.ts (2 errors) ====
    var v = {
        ["" + ""]: 0,
        ["" + ""]() { },
        get ["" + ""]() { return 0; },
        set ["" + ""](x) { }
            ~~~~~~~~~
!!! error TS7032: Property '["" + ""]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }